--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -12,22 +12,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 20.x]
-
     steps:
       - uses: actions/checkout@v4
       
-      - name: Set up Node.js
+      - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '20.x'
 
       - name: Install dependencies
-        run: npm install
-        working-directory: projeto_docker_marcosvinicius/atividade/backend  # Removido o "./"
+        run: npm ci
+        working-directory: projeto_docker_marcosvinicius/atividade/backend  # Especifica o diretório correto
 
       - name: Run tests
         run: npm test
-        working-directory: projeto_docker_marcosvinicius/atividade/backend  # Removido o "./"
+        working-directory: projeto_docker_marcosvinicius/atividade/backend  # Especifica o diretório correto
